# Reach

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  clippy.toml  deny.toml  justfile  rust-toolchain.toml
.cargo/: config.toml
.github/: pull_request_template.md
.github/workflows/: rust-ci.yml
docs/: repo-structure.md
docs/adr/: 0001-platform-foundations.md  0002-messaging-ingress-envelope-intake.md  README.md
docs/api/auth/: README.md
docs/api/identity/: README.md
docs/api/keys/: README.md
docs/api/messaging-ingress/: README.md
docs/architecture/: production-blueprint.md
docs/schema/cockroach/: ownership.md
docs/threat-model/: README.md  initial-trust-boundaries.md  messaging-ingress-envelope-intake.md
libs/auth-types/: Cargo.toml
libs/auth-types/src/: lib.rs
libs/config/: Cargo.toml
libs/config/src/: lib.rs
libs/identity-lifecycle/: Cargo.toml
libs/identity-lifecycle/src/: lib.rs
libs/key-material/: Cargo.toml
libs/key-material/src/: lib.rs
libs/request-auth/: Cargo.toml
libs/request-auth/src/: lib.rs
libs/telemetry/: Cargo.toml
libs/telemetry/src/: lib.rs
libs/testing/: Cargo.toml
libs/testing/src/: lib.rs
services/auth/: Cargo.toml
services/auth/migrations/: 0001_auth.sql  0002_auth_sessions_access_token_jti_idx.sql
services/auth/src/: bootstrap.rs  errors.rs  main.rs
services/auth/src/application/: mod.rs
services/auth/src/domain/: mod.rs
services/auth/src/http/: mod.rs
services/auth/src/repository/: cockroach.rs  mod.rs
services/auth/tests/: application_cockroach.rs  repository_cockroach.rs
services/identity/: Cargo.toml
services/identity/migrations/: 0001_identity.sql  0002_identity_minimize_columns.sql
services/identity/src/: bootstrap.rs  errors.rs  lib.rs  main.rs
services/identity/src/application/: mod.rs
services/identity/src/domain/: mod.rs
services/identity/src/http/: mod.rs
services/identity/src/repository/: cockroach.rs  mod.rs
services/identity/tests/: application_cockroach.rs  repository_cockroach.rs
services/keys/: Cargo.toml
services/keys/migrations/: 0001_keys.sql  0002_keys_bundle_signed_prekey_fk.sql  0003_signed_prekeys_current_device_idx.sql
services/keys/src/: bootstrap.rs  errors.rs  main.rs
services/keys/src/application/: mod.rs
services/keys/src/domain/: mod.rs
services/keys/src/http/: mod.rs
services/keys/src/repository/: cockroach.rs  mod.rs
services/keys/tests/: application_cockroach.rs  repository_cockroach.rs
services/messaging-ingress/: Cargo.toml
services/messaging-ingress/migrations/: 0001_messaging_ingress.sql  0002_envelope_intake.sql
services/messaging-ingress/src/: bootstrap.rs  errors.rs  main.rs
services/messaging-ingress/src/application/: mod.rs
services/messaging-ingress/src/domain/: mod.rs
services/messaging-ingress/src/http/: mod.rs
services/messaging-ingress/src/repository/: cockroach.rs  mod.rs
services/messaging-ingress/tests/: application_cockroach.rs
