[workspace]
resolver = "2"
members = [
    "libs/config",
    "libs/telemetry",
    "libs/auth-types",
    "services/identity",
    "services/auth",
    "services/keys",
    "services/messaging-ingress",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
publish = false
rust-version = "1.82"
version = "0.1.0"

[workspace.dependencies]
async-trait = "0.1.83"
axum = { version = "0.7.9", features = ["http1", "json", "macros"] }
chrono = { version = "0.4.39", features = ["clock", "serde"] }
config = { version = "0.14.1", default-features = false, features = ["toml"] }
http = "1.2.0"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
sqlx = { version = "0.8.2", default-features = false, features = ["chrono", "macros", "postgres", "runtime-tokio-rustls", "uuid"] }
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["macros", "net", "rt-multi-thread", "signal", "time"] }
tower-http = { version = "0.6.2", features = ["request-id", "timeout", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1.11.0", features = ["serde", "v7"] }

