[package]
name = "reach-key-material"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
reach-auth-types = { path = "../auth-types" }
sqlx.workspace = true
thiserror.workspace = true
uuid.workspace = true
