[package]
name = "reach-request-auth"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
async-trait.workspace = true
axum.workspace = true
reach-auth-types = { path = "../auth-types" }
reach-config = { path = "../config" }
secrecy.workspace = true
serde.workspace = true
subtle.workspace = true
thiserror.workspace = true
