[package]
name = "reach-telemetry"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
reach-config = { path = "../config" }
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

