[package]
name = "reach-auth-service"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
async-trait.workspace = true
axum.workspace = true
chrono.workspace = true
reach-auth-types = { path = "../../libs/auth-types" }
reach-config = { path = "../../libs/config" }
reach-telemetry = { path = "../../libs/telemetry" }
serde.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
reach-test-support = { path = "../../libs/testing" }
tower.workspace = true
